[project]
name = "parser-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "fastapi>=0.126.0",
    "faststream[rabbit]>=0.6.4",
    "httpx>=0.28.1",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "xlrd>=2.0.2",
]
